feat: fix reconcile error and add e2e

--- a/config/samples/hbase_v1alpha1_hbasecluster.yaml
+++ b/config/samples/hbase_v1alpha1_hbasecluster.yaml
@@ -11,6 +11,9 @@ metadata:
 spec:
   image:
     custom: docker.stackable.tech/stackable/hbase:2.4.17-stackable24.3.0
+  clusterConfig:
+    zookeeperConfigMapName: sample-hbase-znode
+    hdfsConfigMapName: hdfscluster-sample
   master:
     roleGroups:
       default:
