--- a/test/e2e/setup/subs-assert.yaml
+++ b/test/e2e/setup/subs-assert.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: zookeeper-operator-controller-manager
-  namespace: kubedatastack-operators
 status:
   availableReplicas: 1
 ---
@@ -10,6 +9,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: listener-operator-controller-manager
-  namespace: kubedatastack-operators
+status:
+  availableReplicas: 1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: hdfs-operator-controller-manager
 status:
   availableReplicas: 1
