--- a/test/e2e/kerberos/hdfs-assert.yaml
+++ b/test/e2e/kerberos/hdfs-assert.yaml
@@ -3,17 +3,17 @@
 apiVersion: zookeeper.zncdata.dev/v1alpha1
 kind: ZookeeperZnode
 metadata:
-  name: hdfs-znode
+  name: krb5-hdfs-znode
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: hdfs-znode
+  name: krb5-hdfs-znode
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hdfs-default-journalnode
+  name: krb5-hdfs-default-journalnode
 status:
   availableReplicas: 1
   replicas: 1
@@ -21,7 +21,7 @@ status:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hdfs-default-namenode
+  name: krb5-hdfs-default-namenode
 status:
   availableReplicas: 2
   replicas: 2
@@ -29,7 +29,7 @@ status:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hdfs-default-datanode
+  name: krb5-hdfs-default-datanode
 status:
   availableReplicas: 2
   replicas: 2
