--- a/test/e2e/setup/zookeeper.yaml
+++ b/test/e2e/setup/zookeeper.yaml
@@ -3,19 +3,17 @@ kind: ZookeeperCluster
 metadata:
   labels:
     app.kubernetes.io/name: zookeepercluster
-    app.kubernetes.io/instance: simple-zookeeper
+    app.kubernetes.io/instance: zk
     app.kubernetes.io/part-of: zookeeper-operator
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: zookeeper-operator
-  name: simple-zookeeper
+  name: zk
 spec:
   image:
     repository: docker.io/bitnami/zookeeper
     tag: 3.9.1-debian-12-r15
   clusterConfig:
-    service:
-      type: NodePort
-      port: 2181
+    listenerClass: cluster-internal
   server:
     config:
       resources:
@@ -23,7 +21,7 @@ spec:
           min: "100m"
           max: "200m"
         memory:
-          limit: "500Mi"
+          limit: "400Mi"
     roleGroups:
       default:
         replicas: 2
