test: fix e2d cleanup error, add sleep in cleanup stage

--- a/test/e2e/default/chainsaw-test.yaml
+++ b/test/e2e/default/chainsaw-test.yaml
@@ -29,14 +29,13 @@ spec:
     - assert:
         file: ../setup/hdfs-assert.yaml
     cleanup:
-    - wait:
-        apiVersion: v1
-        kind: Pod
-        name: simple-hdfs-default-namenode-0
-        for:
-          deletion: {}
+    - sleep:
+        duration: 20s
   - try:
     - apply:
         file: hbase.yaml
     - assert:
         file: hbase-assert.yaml
+    cleanup:
+    - sleep:
+        duration: 10s
