--- a/test/e2e/default/hbase-assert.yaml
+++ b/test/e2e/default/hbase-assert.yaml
@@ -3,17 +3,17 @@
 apiVersion: zookeeper.zncdata.dev/v1alpha1
 kind: ZookeeperZnode
 metadata:
-  name: simple-hbase-znode
+  name: hbase-znode
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: simple-hbase-znode
+  name: hbase-znode
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: simple-hbase-master-default
+  name: hbase-master-default
 status:
   availableReplicas: 1
   replicas: 1
@@ -21,7 +21,7 @@ status:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: simple-hbase-regionserver-default
+  name: hbase-regionserver-default
 status:
   availableReplicas: 1
   replicas: 1
@@ -29,7 +29,7 @@ status:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: simple-hbase-restserver-default
+  name: hbase-restserver-default
 status:
   availableReplicas: 1
   replicas: 1
