--- a/test/e2e/kerberos/chainsaw-test.yaml
+++ b/test/e2e/kerberos/chainsaw-test.yaml
@@ -136,14 +136,13 @@ spec:
           "
         
     cleanup:
-    - wait:
-        apiVersion: v1
-        kind: Pod
-        name: simple-hdfs-default-namenode-0
-        for:
-          deletion: {}
+    - sleep:
+        duration: 20s
   - try:
     - apply:
         file: hbase.yaml
     - assert:
         file: hbase-assert.yaml
+    cleanup:
+    - sleep:
+        duration: 10s
