--- a/test/e2e/setup/olm.yaml
+++ b/test/e2e/setup/olm.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: zncdata-stack
+  name: kubedoop
 spec:
   # if not specified, the operator group will target all namespaces
   # so the operator will be able to watch and manage resources in all namespaces
@@ -11,11 +11,11 @@ spec:
 apiVersion: operators.coreos.com/v1alpha1
 kind: CatalogSource
 metadata:
-  name: kubedata-catalog
+  name: kubedoop-catalog
 spec:
   sourceType: grpc
-  image: quay.io/zncdatadev/kubedata-catalog:latest
-  displayName: kubedata-catalog
+  image: quay.io/zncdatadev/kubedoop-catalog:latest
+  displayName: kubedoop-catalog
   publisher: zncdatadev
   updateStrategy:
     registryPoll:
